[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/Spike_wall.gd" type="Script" id=1]

[sub_resource type="QuadMesh" id=1]
size = Vector2( 8, 128 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 4, 64 )

[sub_resource type="QuadMesh" id=3]
size = Vector2( 4, 100 )

[sub_resource type="PrismMesh" id=4]
size = Vector3( 16, 16, 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[node name="Spike Wall" type="Node2D"]
script = ExtResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]

[node name="Wall" type="MeshInstance2D" parent="StaticBody2D"]
mesh = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource( 2 )

[node name="Support" type="MeshInstance2D" parent="."]
position = Vector2( 18.75, 16 )
rotation = -0.352523
mesh = SubResource( 3 )

[node name="Spike" type="Node2D" parent="."]
position = Vector2( -16, 48 )
rotation = -1.5708

[node name="MeshInstance2D" type="MeshInstance2D" parent="Spike"]
rotation = -3.14159
scale = Vector2( 2, 2 )
mesh = SubResource( 4 )

[node name="KillArea" type="Area2D" parent="Spike"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike/KillArea"]
shape = SubResource( 5 )

[node name="Spike2" type="Node2D" parent="."]
position = Vector2( -16, 16 )
rotation = -1.5708

[node name="MeshInstance2D" type="MeshInstance2D" parent="Spike2"]
rotation = -3.14159
scale = Vector2( 2, 2 )
mesh = SubResource( 4 )

[node name="KillArea" type="Area2D" parent="Spike2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike2/KillArea"]
shape = SubResource( 5 )

[node name="Spike3" type="Node2D" parent="."]
position = Vector2( -16, -16 )
rotation = -1.5708

[node name="MeshInstance2D" type="MeshInstance2D" parent="Spike3"]
rotation = -3.14159
scale = Vector2( 2, 2 )
mesh = SubResource( 4 )

[node name="KillArea" type="Area2D" parent="Spike3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike3/KillArea"]
shape = SubResource( 5 )

[node name="Spike4" type="Node2D" parent="."]
position = Vector2( -16, -48 )
rotation = -1.5708

[node name="MeshInstance2D" type="MeshInstance2D" parent="Spike4"]
rotation = -3.14159
scale = Vector2( 2, 2 )
mesh = SubResource( 4 )

[node name="KillArea" type="Area2D" parent="Spike4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Spike4/KillArea"]
shape = SubResource( 5 )

[connection signal="body_entered" from="Spike/KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="body_entered" from="Spike2/KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="body_entered" from="Spike3/KillArea" to="." method="_on_KillArea_body_entered"]
[connection signal="body_entered" from="Spike4/KillArea" to="." method="_on_KillArea_body_entered"]
